fix css for search-bar in dark mode

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -1,9 +1,9 @@
 .search-bar {
   display: block;
   width: 100%;
-  height: 45px;
+  height: 65px;
   padding: 08px 12px;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.66666666667;
   border: 1px solid #dddddd;
   border-radius: 03px;
@@ -12,6 +12,8 @@
   -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  background-color: #ff6900;
+  color: aqua;
 
   &:focus,
   &:hover {
